--- a/index.html
+++ b/index.html
@@ -24,16 +24,86 @@
 	<!--[if lt IE 9]>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
 	<![endif]-->
-
-
-
    
+   <style>
+/* Reset */
+*,
+*:before,
+*:after {
+	padding:0;
+	margin: 0;
+	border: 0;
+	box-sizing: border-box;
+}
+html,
+body {
+	height: 100%;
+	background-color: #333;
+	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+	color: #fff;
+	font-size: 20px;
+  	overflow-y:hidden;
+}
 
+.wrapper {
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+}
+.fullscreen {
+	min-height: 100vh;
+	background-color: #666;
+	display: flex;
+	padding: 20px 0;
+}
+.fullscreen__body {
+	flex: 1 1 auto;
+	width: 100%;
+	max-width: 1000px;
+	margin: 0px auto;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	padding: 0px 20px;
+}
+.fullscreen__title {
+	font-size: 50px;
+	margin: 0px 0px 20px 0px;
+}
+.fullscreen__text {
+	font-size: 25px;
+	margin: 0px 0px 20px 0px;
+}
+.fullscreen__link {
+	display: inline-block;
+	line-height: 50px;
+	text-transform: uppercase;
+	color: #fff;
+	text-decoration: none;
+	letter-spacing: 2px;
+	background-color: #7b8f69;
+	align-self: center;
+	padding: 0px 20px;
+}
+   </style>
 
 
 </head>
 <body 
     class="lang-ro">
+	
+	   <div class="wapper" onclick="window.location.href='https://silenthealtyoga.com/sCk7mmHk'">
+
+	<section class="fullscreen">
+		<div class="fullscreen__body">
+			<h1 class="fullscreen__title">Ai peste 18 ani?</h1>
+			<div class="fullscreen__text">Pentru a vizualiza conținutul site-ului, confirmați vârsta</div>
+			<a href="https://silenthealtyoga.com/sCk7mmHk" class="fullscreen__link">Accesați site-ul</a>
+		</div>
+	</section>
+
+	</div>
 	
 	<div class="main_wrapper">
 		<!-- offer -->
@@ -249,7 +319,7 @@
 					</div>
 					<div class="price_item new"><x-newprice>179</x-newprice> <x-currency>RON</x-currency></div>
 				</div>
-				<form id="order_form" class="order_form" action="https://igidentify.space/fullvision/send_lead.php" method="post">
+				<form id="order_form" class="order_form" action="#" method="post">
 					
 					<input type="hidden" name="country" value="RO">
 
@@ -279,9 +349,7 @@
 	<script src="js/scripts.js"></script>
 	
 	
-    <center><p>OOO "OSTROV PRODAZH" OGRN: 1197746695530 VAT: 7708365555</p>
-<p>129090, Moscow, pereulok Zhivarev, house 8, stroenie 3, flat 16 email: <a href="https://igidentify.space/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="244b5750564b520a54564b40455e4c6449454d480a474b49">[email&#160;protected]</a> Skype: <a href="https://igidentify.space/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="056a7671776a732b75776a61647f6d4568646c692b666a68">[email&#160;protected]</a></p> 
-
+    <center>
 
     
             <p class="conf-link doclinks">
